2003/07/10 09:50 muppetman

	* Glib.pm: $VERSION is actually treated as a string, write it as one
	to avoid bootstrap problems when using a locale that writes numbers
	differently.  (thanks to thierry for finding that.)

2003/07/06 16:48 muppetman

	* GSignal.xs: add g_signal_stop_emission_by_name

2003/07/05 06:37 pcg

	* typemap: add gchar_own*, for functions that return allocated
        strings and gchar_length* for functions expecting a length() input.
        * gperl.h: add gchar_own and gchar_len typedefs.

2003/07/04 13:35 muppetman

	* Makefile.PL: patch from Thierry Vignaud fixed my copy and paste
	bug which leads to errors when ExtUtils::Depends isn't present.

	* ChangeLog: bump to 0.26 for release

2003/06/28 03:16 pcg

	* GType.xs: remove superfluous gperl_object_new call.

        * GObject.xs: important bugfix: the calls with own==FALSE in
        GType.xs caused premature death of the perl wrapper. The fix
        incurs a slight performance hit, so only do it when own==TRUE, as
        this should be the only case where it is ever required.

        * t/5.t: test for this case.

2003/06/27 17:00 muppetman

	* GObject.xs: get_data and set_data work only with UVs now,
	because it's not safe to treat them as anything else, and
	since we can use hash keys they aren't needed for anything else.

2003/06/27 12:00 muppetman

	merged realobjects-branch back onto HEAD.  this was a week's worth
	of work, mostly by pcg with some help from me.  here's a summary of
	changelog items from that branch:

	* README.api-changes: clearinghouse for API gripes, please amend
	* GParamSpec.xs, Glib.xs, typemap, gperl.h, Makefile.PL: support
	for pspecs, so we can add properties to gobjects.
	* Subclass.pm, t/[345].t: extra module to ease implementation of
	subclasses, and some tests for it
	* Glib.pm: pod updates
        * GObject.xs: big change in how perl wrappers are implemented.
	the new implementation will only ever create one perl wrapper (a